# captcha_test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  installation.md
backend/: .env.example  Dockerfile  package-lock.json  package.json  temp.txt  tsconfig.json
backend/data/: sites.json.example
backend/public/: captcha-render.js  captcha.js  debug.html  engine.js
backend/scripts/: build-wasm.sh  dev.sh
backend/src/: captcha.ts  config.ts  cors.ts  crypto.ts  env.ts  errors.ts  glyph-renderer.ts  index.ts  rate-limit.ts  redis-error-log.ts  redis.ts  risk-score.ts  security-audit.ts  security-headers.ts  sites.ts
backend/wasm/: Cargo.toml
backend/wasm/src/: decrypt.rs  lib.rs  noise.rs  renderer.rs
docs/: CLIENT.md  CONFIG.md  DEPLOYMENT.md  SERVER.md  WASM.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  server.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  LockRingsLogo.tsx  NoiseCaptcha.tsx  NoiseProofPreview.tsx
frontend/src/pages/: Demo.tsx  Landing.tsx
reference/: controller.html  index.html
