[package]
name = "noise-captcha-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
    "Document",
] }
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
